phone-book-deployment/idp-deployment/src/idp-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: phone-book-security
  labels:
    app.kubernetes.io/name: phone-book-security
