phone-book-deployment/idp-deployment/src/idp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phone-book-idp-service
  namespace: phone-book-security
  labels:
    app.kubernetes.io/name: phone-book-security
spec:
  # Switch it back to ClusterIP as soon as the Ingress is defined.
  type: NodePort
  selector:
    app.kubernetes.io/name: phone-book-idp-deployment
  ports:
    - port: 8080
      nodePort: 30080
