phone-book-deployment/idp-deployment/src/idp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phone-book-idp-ingress
  namespace: phone-book-security
  labels:
    app.kubernetes.io/name: phone-book-security
spec:
  rules:
    - http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: phone-book-idp-service
                port:
                  number: 8080
